
syntax = "proto3";

package proto;

service HospitalService {
  rpc getAvailableBeds(Empty) returns (AvailableBedsReply) {}
  rpc getHospitalsForRegion(Hospital) returns (HospitalsForRegionReply) {}
}


message Empty {}

message AvailableBedsReply {
  int32 message = 1;
}


message Hospital {
  int32 test= 1;
  string host = 2;
  int32 port = 3;
  int32 id = 4;
  string name = 5;
  int32 totalBeds = 6;
  int32 availableBeds = 7;
}

message HospitalsForRegionReply {
  repeated Hospital hospital = 1;
}



